# mpm

./: .gitignore  README.md  main.py  pyproject.toml
src/mpm/: main.py
tests/: test_main.py
