[project]
name = "mpm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "mcp>=1.12.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.12.0",
    "ruff>=0.12.4",
]
